add more test posts

--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -10,6 +10,7 @@
 @import "./pages/blogListingsPage.scss";
 @import "./pages/blogPage.scss";
 @import "./pages/auth.scss";
+@import "./pages/notAuth.scss";
 
 @import "./streamfields/gallery.scss";  
 @import "./streamfields/imageAndText.scss";
