--- a/frontend/sass/pages/homePage.scss
+++ b/frontend/sass/pages/homePage.scss
@@ -20,7 +20,7 @@
         display: flex;
         flex-direction: column;
         // align-items: flex-end;
-        justify-content: flex-end;
+        justify-content: center;
         height: 100%;
         width: 100%;
         // border: 1px solid red;
@@ -31,14 +31,19 @@
     &__ContentWrapper{
         @include bgColorOpacity($colorGrey-1, 0.8);
         width: 40%;
+        // margin-top: ;
         padding: 2rem 3rem 2.5rem 2rem;
+
+        .Button:not(:last-child){
+            margin-bottom: $medium;
+        }
     }
 
     &__Title{
         @include font;
         @include h1;
         color: $colorGrey-7;
-        margin-bottom: $small;
+        margin-bottom: $large;
     }
     
     &__Subtitle{
@@ -47,4 +52,6 @@
         color: $colorGrey-7;
         margin-bottom: 2.5rem;
     }
+
+    
 }
