Add boards and new buttons to dashboard

--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -5,12 +5,14 @@
 @import "./styles/nav.scss";
 @import "./styles/cards.scss";
 @import "./styles/modal.scss";
+@import "./styles/pagination.scss";
 
 @import "./pages/homePage.scss";
 @import "./pages/blogListingsPage.scss";
 @import "./pages/blogPage.scss";
 @import "./pages/auth.scss";
 @import "./pages/notAuth.scss";
+@import "./pages/boardListingsPage.scss";
 
 @import "./streamfields/gallery.scss";  
 @import "./streamfields/imageAndText.scss";
