--- a/landet/templates/blogs/blog_listings_page.html
+++ b/landet/templates/blogs/blog_listings_page.html
@@ -14,11 +14,29 @@
 <div class="BlogListingsPage">
     {% image page.page_image fill-1200x400 format-webp as bg_img %}
     <div class="BlogListingsPage__BackgroundImage" style="background: url('{{bg_img.url}}'); height: 40rem;">
-        <div class="BlogListingsPage__HeadlineWrapper">
-            <h1 class="BlogListingsPage__Headline">{{page.headline}}</h1>   
-            {% if page.subtitle %}
-            <h2 class="BlogListingsPage__Subtitle">{{page.subtitle}}</h2>
-            {% endif %}
+        <div class="BlogListingsPage__BackgroundImageContentWrapper">
+            <div class="BlogListingsPage__HeadlineWrapper">
+                <h1 class="BlogListingsPage__Headline">{{page.headline}}</h1>   
+                {% if page.subtitle %}
+                <h2 class="BlogListingsPage__Subtitle">{{page.subtitle}}</h2>
+                {% endif %}
+            </div>
+            <div class="BlogListingsPage__ButtonsWrapper">
+                <a class="BlogListingsPage__Button Button Button--Primary Button--Small"  href="/admin/pages/add/blogs/blogpage/4/">
+                    <p class="Button__Text Button__Text--Small">Skriv nytt blogginlägg</p>
+                    <!-- <div class="Button__IconWrapper"> -->
+                        <i class="far fa-file-alt"></i>
+                    <!-- </div> -->
+                </a>
+                <a class="BlogListingsPage__Button Button Button--Primary Button--Small"  href="/admin/pages/4/">
+                    <p class="Button__Text Button__Text--Small">Redigera blogginlägg</p>
+                    <i class="far fa-edit"></i>
+                </a>
+                <a class="BlogListingsPage__Button Button Button--Primary Button--Small"  href="#">
+                    <p class="Button__Text Button__Text--Small">Lär dig skriva blogginlägg</p>
+                    <i class="fas fa-question"></i>
+                </a>
+            </div>
         </div>
     </div>
     <div class="BlogListingsPage__CardsWrapper">
@@ -38,36 +56,41 @@
 
     </div>
     {% if posts.paginator.num_pages > 1 %}
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="pagination">
+    <div class="Pagination">
+        
+      <ul class="Pagination__Wrapper">
+
             {% if posts.has_previous %}
-              <li class="page-item">
-                <a href="?page={{ posts.previous_page_number }}" class="page-link">
-                  <span>&laquo;</span>
+              <li class="Pagination__PageItem">
+                <a href="?page={{ posts.previous_page_number }}" class="Pagination__PageLink">
+                    <i class="fas fa-arrow-left"></i>
                 </a>
               </li>
             {% endif %}
 
             {% for page_num in posts.paginator.page_range %}
-              <li class="page-item {% if page_num == posts.number %} active{% endif %}">
-                <a href="?page={{ page_num }}" class="page-link">
-                  {{ page_num }}
-                </a>
-              </li>
+                {% if page_num == posts.number %}
+                <li class="Pagination__PageItem Pagination__PageItem--Active">
+                        {{ page_num }}
+                </li>
+                {% else %}
+                <li class="Pagination__PageItem">
+                    <a href="?page={{ page_num }}" class="Pagination__PageLink">
+                        {{ page_num }}
+                    </a>
+                </li>
+              {% endif %}
             {% endfor %}
 
             {% if posts.has_next %}
-              <li class="page-item">
-                <a href="?page={{ posts.next_page_number }}" class="page-link">
-                  <span>&raquo;</span>
+              <li class="Pagination__PageItem">
+                <a href="?page={{ posts.next_page_number }}" class="Pagination__PageLink">
+                    <i class="fas fa-arrow-right"></i>
                 </a>
               </li>
             {% endif %}
-          </div>
-        </div>
-      </div>
+
+      </ul>
     </div>
   {% endif %}
 </div>
